force-app/main/default/objects/Order/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drawer for Orders</relationshipLabel>
    <relationshipName>Drawing_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>