force-app/main/default/objects/Order/fields/Account_Blocked_reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Blocked_reason__c</fullName>
    <formula>Account.Blocked_reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Blocked reason</label>
    <type>Text</type>
</CustomField>