force-app/main/default/objects/Order/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>This field is used as a workaround for FSL Flow limitations, this field will be used to filter Orders by Account Name</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>