force-app/main/default/objects/Order/fields/Account_Sage_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Sage_ID__c</fullName>
    <formula>Account.Sage_ID__c</formula>
    <label>Account Sage ID</label>
    <type>Text</type>
</CustomField>