force-app/main/default/objects/Order/fields/AccountBlocked__c.field-meta.xml
<CustomField>
    <fullName>AccountBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked account (Collection)</label>
    <type>Checkbox</type>
</CustomField>