force-app/main/default/objects/Order/fields/Actual_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Installation_Date__c</fullName>
    <label>Actual Installation Date</label>
    <type>Date</type>
</CustomField>