force-app/main/default/objects/Order/fields/ALL_Order_Products_Created__c.field-meta.xml
<CustomField>
    <fullName>ALL_Order_Products_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order product created</description>
    <label>ALL Order Products Created</label>
    <type>Checkbox</type>
</CustomField>