force-app/main/default/objects/Order/fields/Blocked_By_Finance__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting payment</label>
    <type>Checkbox</type>
</CustomField>