force-app/main/default/objects/Order/fields/Blocked_By_Finance_Manual__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By_Finance_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual blocking</label>
    <type>Checkbox</type>
</CustomField>