force-app/main/default/objects/Order/fields/Blocked_by_WMS__c.field-meta.xml
<CustomField>
    <fullName>Blocked_by_WMS__c</fullName>
    <label>Blocked by WMS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Non</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>