force-app/main/default/objects/Order/fields/Blocking_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Reason__c</fullName>
    <label>Blocking reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>