force-app/main/default/objects/Order/fields/Blocking_Reason_Manual__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Reason_Manual__c</fullName>
    <label>Manual Blocking reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>