force-app/main/default/objects/Order/fields/Bypass_Charges__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>the client won’t have to pay anything even if he is supposed to</inlineHelpText>
    <label>Bypass Charges</label>
    <type>Checkbox</type>
</CustomField>