force-app/main/default/objects/Order/fields/Coating__c.field-meta.xml
<CustomField>
    <fullName>Coating__c</fullName>
    <label>Coating</label>
    <length>80</length>
    <type>Text</type>
</CustomField>