force-app/main/default/objects/Order/fields/Commercial_Contract__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contract__c</fullName>
    <formula>if(  ISPICKVAL(Account.Account_Type__c, &apos;Commercial&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial contract</label>
    <type>Checkbox</type>
</CustomField>