force-app/main/default/objects/Order/fields/Compliance_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Visit_Date__c</fullName>
    <label>Compliance Visit Date</label>
    <type>Date</type>
</CustomField>