force-app/main/default/objects/Order/fields/Consider_Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Consider_Financed_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in calculation of Amount Paid + Amount Financed</description>
    <label>Consider Financed Amount (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>