force-app/main/default/objects/Order/fields/CR_Delay__c.field-meta.xml
<CustomField>
    <fullName>CR_Delay__c</fullName>
    <formula>IF( Region__c = &quot;Quebec&quot;,
&quot;25&quot;,
IF(OR(Region__c = &quot;Montreal&quot;, Region__c = &quot;Gatineau&quot;),
&quot;15&quot;,
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CR Delay</label>
    <type>Text</type>
</CustomField>