force-app/main/default/objects/Order/fields/CR_Depth_1__c.field-meta.xml
<CustomField>
    <fullName>CR_Depth_1__c</fullName>
    <label>CR Depth 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>