force-app/main/default/objects/Order/fields/CR_Depth_2__c.field-meta.xml
<CustomField>
    <fullName>CR_Depth_2__c</fullName>
    <label>CR Depth 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>