force-app/main/default/objects/Order/fields/CR_Length__c.field-meta.xml
<CustomField>
    <fullName>CR_Length__c</fullName>
    <label>CR Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>