force-app/main/default/objects/Order/fields/CR_PoolDeck_Amount__c.field-meta.xml
<CustomField>
    <fullName>CR_PoolDeck_Amount__c</fullName>
    <formula>IF(AND(Amount_Paid__c &lt; Order_Total__c * VALUE(TEXT(Release_percentage_Residential__c))/100, OR(ISPICKVAL(Contract_Type__c , &apos;115&apos;),AND(ISPICKVAL(Contract_Type__c , &apos;112&apos;),ISPICKVAL(ContractType__c , &apos;36&apos;)))),
0,
IF(Installation_Done_Tech__c,Amount_Due__c,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to finish the pool deck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>