force-app/main/default/objects/Order/fields/CR_Width_1__c.field-meta.xml
<CustomField>
    <fullName>CR_Width_1__c</fullName>
    <label>CR Width 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>