force-app/main/default/objects/Order/fields/Customer_Access_Link_FR__c.field-meta.xml
<CustomField>
    <fullName>Customer_Access_Link_FR__c</fullName>
    <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_620, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_620) - 1), &apos;my.salesforce.com&apos;, &apos;my.site.com&apos;) &amp; &apos;/s/login/?language=fr&amp;startURL=%2Fs%2F%3Flanguage%3Dfr%26t%3D1737979287657&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Access Link FR</label>
    <type>Text</type>
</CustomField>