force-app/main/default/objects/Order/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <formula>IF( Region__c = &quot;Quebec&quot;,
&quot;14&quot;,
IF(OR(Region__c = &quot;Montreal&quot;, Region__c = &quot;Gatineau&quot;),
&quot;7&quot;,
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay</label>
    <type>Text</type>
</CustomField>