force-app/main/default/objects/Order/fields/Delivery_Digging_Completed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Digging_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is true when the Delivery or Digging Service appointment is completed. this will cause the order to be blocked until the payment is completed in full</description>
    <label>Delivery/Digging Completed</label>
    <type>Checkbox</type>
</CustomField>