force-app/main/default/objects/Order/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Livraison</fullName>
                <label>Delivery</label>
            </value>
            <value>
                <fullName>Cueillette</fullName>
                <label>Pickup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>