force-app/main/default/objects/Order/fields/Designer__c.field-meta.xml
<CustomField>
    <fullName>Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Designer)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>