force-app/main/default/objects/Order/fields/Designer_Email__c.field-meta.xml
<CustomField>
    <fullName>Designer_Email__c</fullName>
    <label>Designer Email</label>
    <type>Email</type>
</CustomField>