force-app/main/default/objects/Order/fields/Documents_Tech__c.field-meta.xml
<CustomField>
    <fullName>Documents_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All documents are attached</label>
    <type>Checkbox</type>
</CustomField>