force-app/main/default/objects/Order/fields/Electronic_signature_contract__c.field-meta.xml
<CustomField>
    <fullName>Electronic_signature_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signed Electronically</label>
    <type>Checkbox</type>
</CustomField>