force-app/main/default/objects/Order/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Utilisé pour l&apos;intégration des sondages</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>