force-app/main/default/objects/Order/fields/Email_Magasin_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Magasin_Signature__c</fullName>
    <formula>Case__r.Signature_Email__c</formula>
    <label>Email Magasin Signature</label>
    <type>Text</type>
</CustomField>