force-app/main/default/objects/Order/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <description>Utilisé pour l&apos;intégration des sondages</description>
    <label>Family Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>