force-app/main/default/objects/Order/fields/Financing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Financing_Amount__c</fullName>
    <label>Financing Amount</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>