force-app/main/default/objects/Order/fields/Financing_Authorisation__c.field-meta.xml
<CustomField>
    <fullName>Financing_Authorisation__c</fullName>
    <label>Financing Authorisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>