force-app/main/default/objects/Order/fields/Financing_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Financing_Cancelled__c</fullName>
    <label>Financing Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>