force-app/main/default/objects/Order/fields/Financing_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Financing_Signature_Date__c</fullName>
    <label>Financing Signature Date</label>
    <type>Date</type>
</CustomField>