force-app/main/default/objects/Order/fields/Financing_Type2__c.field-meta.xml
<CustomField>
    <fullName>Financing_Type2__c</fullName>
    <label>Financing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financing_Type</valueSetName>
    </valueSet>
</CustomField>