force-app/main/default/objects/Order/fields/Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>Financing_Type__c</fullName>
    <label>Financing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>