force-app/main/default/objects/Order/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>