force-app/main/default/objects/Order/fields/GU_Ceramic_Amount__c.field-meta.xml
<CustomField>
    <fullName>GU_Ceramic_Amount__c</fullName>
    <formula>if( ISPICKVAL(Contract_Type__c , &apos;116&apos;)
, Amount_Due__c
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for Ceramics</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>