force-app/main/default/objects/Order/fields/HST__c.field-meta.xml
<CustomField>
    <fullName>HST__c</fullName>
    <label>HST</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>