force-app/main/default/objects/Order/fields/HST_Province__c.field-meta.xml
<CustomField>
    <fullName>HST_Province__c</fullName>
    <label>HST Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>New Brunswick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>