force-app/main/default/objects/Order/fields/Installation_Delivery_Survey_1_Year_URL__c.field-meta.xml
<CustomField>
    <fullName>Installation_Delivery_Survey_1_Year_URL__c</fullName>
    <label>Installation Delivery Survey 1 Year URL</label>
    <type>Url</type>
</CustomField>