force-app/main/default/objects/Order/fields/Installation_Done_Tech__c.field-meta.xml
<CustomField>
    <fullName>Installation_Done_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Done Tech</label>
    <type>Checkbox</type>
</CustomField>