force-app/main/default/objects/Order/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <label>Installation Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>