force-app/main/default/objects/Order/fields/is_Financed__c.field-meta.xml
<CustomField>
    <fullName>is_Financed__c</fullName>
    <formula>IF( Financing_Authorisation__c !=&apos;&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Financed</label>
    <type>Checkbox</type>
</CustomField>