force-app/main/default/objects/Order/fields/Litres__c.field-meta.xml
<CustomField>
    <fullName>Litres__c</fullName>
    <label>Litres</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>