force-app/main/default/objects/Order/fields/Measurement_Date__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Date__c</fullName>
    <label>Measurement Date</label>
    <type>Date</type>
</CustomField>