force-app/main/default/objects/Order/fields/Mini_Charger__c.field-meta.xml
<CustomField>
    <fullName>Mini_Charger__c</fullName>
    <label>Mini Charger</label>
    <length>80</length>
    <type>Text</type>
</CustomField>