force-app/main/default/objects/Order/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number</label>
    <type>Text</type>
</CustomField>