force-app/main/default/objects/Order/fields/On_Hold_Financing_tech__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Financing_tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold Financing tech</label>
    <type>Checkbox</type>
</CustomField>