force-app/main/default/objects/Order/fields/Order_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Creation_Date__c</fullName>
    <label>Order Creation Date</label>
    <type>Date</type>
</CustomField>