force-app/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Sage Order Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>