force-app/main/default/objects/Order/fields/Order_Uniquifier__c.field-meta.xml
<CustomField>
    <fullName>Order_Uniquifier__c</fullName>
    <externalId>true</externalId>
    <label>Order Uniquifier</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>