force-app/main/default/objects/Order/fields/Other_Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Delivery_Amount__c</fullName>
    <formula>if(
Not(
OR(
 ISPICKVAL( Contract_Type__c , &apos;115&apos;),
 AND (
  ISPICKVAL( Contract_Type__c , &apos;112&apos;),
  ISPICKVAL( ContractType__c , &apos;36&apos;)
 ),
 ISPICKVAL( Contract_Type__c , &apos;124&apos;),
AND(
  ISPICKVAL( Contract_Type__c , &apos;112&apos;),
OR(
ISPICKVAL( ContractType__c , &apos;38&apos;),
ISPICKVAL( ContractType__c , &apos;37&apos;))
 ),

 ISPICKVAL( Contract_Type__c , &apos;110&apos;),
 ISPICKVAL( Contract_Type__c , &apos;116&apos;)
 
)), Amount_Due__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>