force-app/main/default/objects/Order/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>60</length>
    <type>Text</type>
</CustomField>