force-app/main/default/objects/Order/fields/Paid_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Paid_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Delivered</label>
    <type>Checkbox</type>
</CustomField>