force-app/main/default/objects/Order/fields/Payment_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Paid__c</fullName>
    <formula>Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>