force-app/main/default/objects/Order/fields/Payment_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Order_Total__c</fullName>
    <formula>Order_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>