force-app/main/default/objects/Order/fields/Physically_Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Physically_Signed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physically Signed Contract</label>
    <type>Checkbox</type>
</CustomField>