force-app/main/default/objects/Order/fields/Pick_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Date__c</fullName>
    <label>Pick-Up Date</label>
    <type>Date</type>
</CustomField>