force-app/main/default/objects/Order/fields/Plan_Attached_tech__c.field-meta.xml
<CustomField>
    <fullName>Plan_Attached_tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Attached tech</label>
    <type>Checkbox</type>
</CustomField>