force-app/main/default/objects/Order/fields/Plan_Rejected_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Plan_Rejected_by_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plan Rejected</label>
    <type>Checkbox</type>
</CustomField>