force-app/main/default/objects/Order/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_620, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_620) - 1), &apos;my.salesforce.com&apos;, &apos;my.site.com/s/order/&apos;) &amp; Id &amp; &apos;/&apos; &amp; OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal URL</label>
    <type>Text</type>
</CustomField>