force-app/main/default/objects/Order/fields/Post_sale_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Post_sale_Survey_URL__c</fullName>
    <label>Post-sale Survey URL</label>
    <type>Url</type>
</CustomField>