force-app/main/default/objects/Order/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <length>2</length>
    <type>Text</type>
</CustomField>