force-app/main/default/objects/Order/fields/QST__c.field-meta.xml
<CustomField>
    <fullName>QST__c</fullName>
    <label>QST</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>