force-app/main/default/objects/Order/fields/RC_Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>RC_Delivery_Amount__c</fullName>
    <formula>if( AND(Amount_Paid__c &lt; Order_Total__c * VALUE(TEXT(Release_percentage_Residential__c))/100, ISPICKVAL(Contract_Type__c , &apos;124&apos;)) ,
Order_Total__c * VALUE(TEXT(Release_percentage_Residential__c))/100 - Amount_Paid__c
,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>