force-app/main/default/objects/Order/fields/RC_PoolDeck_Amount__c.field-meta.xml
<CustomField>
    <fullName>RC_PoolDeck_Amount__c</fullName>
    <formula>if( AND(Amount_Paid__c &lt; Order_Total__c * VALUE(TEXT(Release_percentage_Residential__c))/100, ISPICKVAL(Contract_Type__c , &apos;124&apos;)) ,
0,
IF(Installation_Done_Tech__c,Amount_Due__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to finish the pool deck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>