force-app/main/default/objects/Order/fields/Reason_to_bypass_charges__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_bypass_charges__c</fullName>
    <label>Reason to bypass charges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>